AntlrParser/.antlr/CoolParser.java
// Generated from /home/amir-pc/RiderProjects/toy-lang/AntlrParser/CoolParser.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CoolParser extends CoolParserBase {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		MultiLineComment=1, SingleLineComment=2, OpenParenToken=3, CloseParenToken=4, 
		OpenBraceToken=5, CloseBraceToken=6, SemiColonToken=7, CommaToken=8, AssignToken=9, 
		ColonToken=10, DotToken=11, PlusToken=12, MinusToken=13, NotToken=14, 
		MultiplyToken=15, DivideToken=16, ArrowToken=17, LessThanToken=18, LessThanEqualsToken=19, 
		EqualsToken=20, NotEqualsToken=21, AndToken=22, OrToken=23, NullLiteralToken=24, 
		BooleanLiteralToken=25, DecimalLiteralToken=26, CaseToken=27, ElseToken=28, 
		NewToken=29, VarToken=30, CatchToken=31, OverrideToken=32, MatchToken=33, 
		WhileToken=34, IfToken=35, WithToken=36, DefToken=37, NativeToken=38, 
		ClassToken=39, ExtendsToken=40, NameToken=41, StringLiteralToken=42, WhiteSpacesToken=43, 
		LineTerminatorToken=44, UnexpectedCharacterToken=45;
	public static final int
		RULE_classes = 0, RULE_class_nonterminal = 1, RULE_feature = 2, RULE_many_features = 3, 
		RULE_features = 4, RULE_function_decl = 5, RULE_formal = 6, RULE_many_formal = 7, 
		RULE_formals = 8, RULE_actual = 9, RULE_many_actual = 10, RULE_actuals = 11, 
		RULE_native_nonterminal = 12, RULE_expr_many = 13, RULE_expr = 14, RULE_atomic = 15, 
		RULE_null_arm = 16, RULE_typed_arm = 17, RULE_arm = 18, RULE_many_arm = 19, 
		RULE_arms = 20;
	private static String[] makeRuleNames() {
		return new String[] {
			"classes", "class_nonterminal", "feature", "many_features", "features", 
			"function_decl", "formal", "many_formal", "formals", "actual", "many_actual", 
			"actuals", "native_nonterminal", "expr_many", "expr", "atomic", "null_arm", 
			"typed_arm", "arm", "many_arm", "arms"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'('", "')'", "'{'", "'}'", "';'", "','", "'='", "':'", 
			"'.'", "'+'", "'-'", "'!'", "'*'", "'/'", "'=>'", "'<'", "'<='", "'=='", 
			"'!='", "'&&'", "'||'", "'null'", null, null, "'case'", "'else'", "'new'", 
			"'var'", "'catch'", "'override'", "'match'", "'while'", "'if'", "'with'", 
			"'def'", "'native'", "'class'", "'extends'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "MultiLineComment", "SingleLineComment", "OpenParenToken", "CloseParenToken", 
			"OpenBraceToken", "CloseBraceToken", "SemiColonToken", "CommaToken", 
			"AssignToken", "ColonToken", "DotToken", "PlusToken", "MinusToken", "NotToken", 
			"MultiplyToken", "DivideToken", "ArrowToken", "LessThanToken", "LessThanEqualsToken", 
			"EqualsToken", "NotEqualsToken", "AndToken", "OrToken", "NullLiteralToken", 
			"BooleanLiteralToken", "DecimalLiteralToken", "CaseToken", "ElseToken", 
			"NewToken", "VarToken", "CatchToken", "OverrideToken", "MatchToken", 
			"WhileToken", "IfToken", "WithToken", "DefToken", "NativeToken", "ClassToken", 
			"ExtendsToken", "NameToken", "StringLiteralToken", "WhiteSpacesToken", 
			"LineTerminatorToken", "UnexpectedCharacterToken"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CoolParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CoolParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ClassesContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(CoolParser.EOF, 0); }
		public List<Class_nonterminalContext> class_nonterminal() {
			return getRuleContexts(Class_nonterminalContext.class);
		}
		public Class_nonterminalContext class_nonterminal(int i) {
			return getRuleContext(Class_nonterminalContext.class,i);
		}
		public ClassesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classes; }
	}

	public final ClassesContext classes() throws RecognitionException {
		ClassesContext _localctx = new ClassesContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_classes);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ClassToken) {
				{
				{
				setState(42);
				class_nonterminal();
				}
				}
				setState(47);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(48);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_nonterminalContext extends ParserRuleContext {
		public TerminalNode ClassToken() { return getToken(CoolParser.ClassToken, 0); }
		public List<TerminalNode> NameToken() { return getTokens(CoolParser.NameToken); }
		public TerminalNode NameToken(int i) {
			return getToken(CoolParser.NameToken, i);
		}
		public FormalsContext formals() {
			return getRuleContext(FormalsContext.class,0);
		}
		public TerminalNode ExtendsToken() { return getToken(CoolParser.ExtendsToken, 0); }
		public ActualsContext actuals() {
			return getRuleContext(ActualsContext.class,0);
		}
		public FeaturesContext features() {
			return getRuleContext(FeaturesContext.class,0);
		}
		public Native_nonterminalContext native_nonterminal() {
			return getRuleContext(Native_nonterminalContext.class,0);
		}
		public Class_nonterminalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_nonterminal; }
	}

	public final Class_nonterminalContext class_nonterminal() throws RecognitionException {
		Class_nonterminalContext _localctx = new Class_nonterminalContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_class_nonterminal);
		try {
			setState(70);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(50);
				match(ClassToken);
				setState(51);
				match(NameToken);
				setState(52);
				formals();
				setState(53);
				match(ExtendsToken);
				setState(54);
				match(NameToken);
				setState(55);
				actuals();
				setState(56);
				features();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(58);
				match(ClassToken);
				setState(59);
				match(NameToken);
				setState(60);
				formals();
				setState(61);
				match(ExtendsToken);
				setState(62);
				native_nonterminal();
				setState(63);
				features();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(65);
				match(ClassToken);
				setState(66);
				match(NameToken);
				setState(67);
				formals();
				setState(68);
				features();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FeatureContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Function_declContext function_decl() {
			return getRuleContext(Function_declContext.class,0);
		}
		public FeatureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_feature; }
	}

	public final FeatureContext feature() throws RecognitionException {
		FeatureContext _localctx = new FeatureContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_feature);
		try {
			setState(74);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(72);
				expr(0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(73);
				function_decl();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Many_featuresContext extends ParserRuleContext {
		public FeatureContext feature() {
			return getRuleContext(FeatureContext.class,0);
		}
		public Many_featuresContext many_features() {
			return getRuleContext(Many_featuresContext.class,0);
		}
		public List<TerminalNode> SemiColonToken() { return getTokens(CoolParser.SemiColonToken); }
		public TerminalNode SemiColonToken(int i) {
			return getToken(CoolParser.SemiColonToken, i);
		}
		public Many_featuresContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_many_features; }
	}

	public final Many_featuresContext many_features() throws RecognitionException {
		return many_features(0);
	}

	private Many_featuresContext many_features(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Many_featuresContext _localctx = new Many_featuresContext(_ctx, _parentState);
		Many_featuresContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_many_features, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(77);
				feature();
				}
				break;
			case 2:
				{
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(89);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Many_featuresContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_many_features);
					setState(81);
					if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
					setState(82);
					match(SemiColonToken);
					setState(83);
					feature();
					setState(85);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
					case 1:
						{
						setState(84);
						match(SemiColonToken);
						}
						break;
					}
					}
					} 
				}
				setState(91);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class FeaturesContext extends ParserRuleContext {
		public TerminalNode OpenBraceToken() { return getToken(CoolParser.OpenBraceToken, 0); }
		public Many_featuresContext many_features() {
			return getRuleContext(Many_featuresContext.class,0);
		}
		public TerminalNode CloseBraceToken() { return getToken(CoolParser.CloseBraceToken, 0); }
		public FeaturesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_features; }
	}

	public final FeaturesContext features() throws RecognitionException {
		FeaturesContext _localctx = new FeaturesContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_features);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(OpenBraceToken);
			setState(93);
			many_features(0);
			setState(94);
			match(CloseBraceToken);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_declContext extends ParserRuleContext {
		public TerminalNode DefToken() { return getToken(CoolParser.DefToken, 0); }
		public List<TerminalNode> NameToken() { return getTokens(CoolParser.NameToken); }
		public TerminalNode NameToken(int i) {
			return getToken(CoolParser.NameToken, i);
		}
		public FormalsContext formals() {
			return getRuleContext(FormalsContext.class,0);
		}
		public TerminalNode ColonToken() { return getToken(CoolParser.ColonToken, 0); }
		public TerminalNode AssignToken() { return getToken(CoolParser.AssignToken, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode OverrideToken() { return getToken(CoolParser.OverrideToken, 0); }
		public Function_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_decl; }
	}

	public final Function_declContext function_decl() throws RecognitionException {
		Function_declContext _localctx = new Function_declContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_function_decl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OverrideToken) {
				{
				setState(96);
				match(OverrideToken);
				}
			}

			setState(99);
			match(DefToken);
			setState(100);
			match(NameToken);
			setState(101);
			formals();
			setState(102);
			match(ColonToken);
			setState(103);
			match(NameToken);
			setState(104);
			match(AssignToken);
			setState(105);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormalContext extends ParserRuleContext {
		public List<TerminalNode> NameToken() { return getTokens(CoolParser.NameToken); }
		public TerminalNode NameToken(int i) {
			return getToken(CoolParser.NameToken, i);
		}
		public TerminalNode ColonToken() { return getToken(CoolParser.ColonToken, 0); }
		public FormalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formal; }
	}

	public final FormalContext formal() throws RecognitionException {
		FormalContext _localctx = new FormalContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_formal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(NameToken);
			setState(108);
			match(ColonToken);
			setState(109);
			match(NameToken);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Many_formalContext extends ParserRuleContext {
		public FormalContext formal() {
			return getRuleContext(FormalContext.class,0);
		}
		public Many_formalContext many_formal() {
			return getRuleContext(Many_formalContext.class,0);
		}
		public List<TerminalNode> CommaToken() { return getTokens(CoolParser.CommaToken); }
		public TerminalNode CommaToken(int i) {
			return getToken(CoolParser.CommaToken, i);
		}
		public Many_formalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_many_formal; }
	}

	public final Many_formalContext many_formal() throws RecognitionException {
		return many_formal(0);
	}

	private Many_formalContext many_formal(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Many_formalContext _localctx = new Many_formalContext(_ctx, _parentState);
		Many_formalContext _prevctx = _localctx;
		int _startState = 14;
		enterRecursionRule(_localctx, 14, RULE_many_formal, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(112);
				formal();
				}
				break;
			case 2:
				{
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(124);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Many_formalContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_many_formal);
					setState(116);
					if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
					setState(117);
					match(CommaToken);
					setState(118);
					formal();
					setState(120);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
					case 1:
						{
						setState(119);
						match(CommaToken);
						}
						break;
					}
					}
					} 
				}
				setState(126);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class FormalsContext extends ParserRuleContext {
		public TerminalNode OpenParenToken() { return getToken(CoolParser.OpenParenToken, 0); }
		public Many_formalContext many_formal() {
			return getRuleContext(Many_formalContext.class,0);
		}
		public TerminalNode CloseParenToken() { return getToken(CoolParser.CloseParenToken, 0); }
		public FormalsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formals; }
	}

	public final FormalsContext formals() throws RecognitionException {
		FormalsContext _localctx = new FormalsContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_formals);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			match(OpenParenToken);
			setState(128);
			many_formal(0);
			setState(129);
			match(CloseParenToken);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActualContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ActualContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actual; }
	}

	public final ActualContext actual() throws RecognitionException {
		ActualContext _localctx = new ActualContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_actual);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Many_actualContext extends ParserRuleContext {
		public ActualContext actual() {
			return getRuleContext(ActualContext.class,0);
		}
		public Many_actualContext many_actual() {
			return getRuleContext(Many_actualContext.class,0);
		}
		public List<TerminalNode> CommaToken() { return getTokens(CoolParser.CommaToken); }
		public TerminalNode CommaToken(int i) {
			return getToken(CoolParser.CommaToken, i);
		}
		public Many_actualContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_many_actual; }
	}

	public final Many_actualContext many_actual() throws RecognitionException {
		return many_actual(0);
	}

	private Many_actualContext many_actual(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Many_actualContext _localctx = new Many_actualContext(_ctx, _parentState);
		Many_actualContext _prevctx = _localctx;
		int _startState = 20;
		enterRecursionRule(_localctx, 20, RULE_many_actual, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(134);
				actual();
				}
				break;
			case 2:
				{
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(146);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Many_actualContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_many_actual);
					setState(138);
					if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
					setState(139);
					match(CommaToken);
					setState(140);
					actual();
					setState(142);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
					case 1:
						{
						setState(141);
						match(CommaToken);
						}
						break;
					}
					}
					} 
				}
				setState(148);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ActualsContext extends ParserRuleContext {
		public TerminalNode OpenParenToken() { return getToken(CoolParser.OpenParenToken, 0); }
		public Many_actualContext many_actual() {
			return getRuleContext(Many_actualContext.class,0);
		}
		public TerminalNode CloseParenToken() { return getToken(CoolParser.CloseParenToken, 0); }
		public ActualsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actuals; }
	}

	public final ActualsContext actuals() throws RecognitionException {
		ActualsContext _localctx = new ActualsContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_actuals);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			match(OpenParenToken);
			setState(150);
			many_actual(0);
			setState(151);
			match(CloseParenToken);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Native_nonterminalContext extends ParserRuleContext {
		public TerminalNode NativeToken() { return getToken(CoolParser.NativeToken, 0); }
		public Native_nonterminalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_native_nonterminal; }
	}

	public final Native_nonterminalContext native_nonterminal() throws RecognitionException {
		Native_nonterminalContext _localctx = new Native_nonterminalContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_native_nonterminal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			match(NativeToken);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expr_manyContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Expr_manyContext expr_many() {
			return getRuleContext(Expr_manyContext.class,0);
		}
		public List<TerminalNode> SemiColonToken() { return getTokens(CoolParser.SemiColonToken); }
		public TerminalNode SemiColonToken(int i) {
			return getToken(CoolParser.SemiColonToken, i);
		}
		public Expr_manyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr_many; }
	}

	public final Expr_manyContext expr_many() throws RecognitionException {
		return expr_many(0);
	}

	private Expr_manyContext expr_many(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Expr_manyContext _localctx = new Expr_manyContext(_ctx, _parentState);
		Expr_manyContext _prevctx = _localctx;
		int _startState = 26;
		enterRecursionRule(_localctx, 26, RULE_expr_many, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				{
				setState(156);
				expr(0);
				}
				break;
			case 2:
				{
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(168);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Expr_manyContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_expr_many);
					setState(160);
					if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
					setState(161);
					match(SemiColonToken);
					setState(162);
					expr(0);
					setState(164);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
					case 1:
						{
						setState(163);
						match(SemiColonToken);
						}
						break;
					}
					}
					} 
				}
				setState(170);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
